update about dan convert tampilan

--- a/PDF_DOC.html
+++ b/PDF_DOC.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DocsMarpher PPT ke PDF</title>
+    <title>DocsMarpher PDF ke DOC</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -86,8 +86,8 @@ h1{
       <div class="container-lg">
         <div class="row justify-content-center">
           <div class="col-md-8">
-            <img src="Assets/PPT PDF.png" alt="logo" class="img-fluid">
-            <h1 class="mt-4">Konversi PPT ke PDF</h1>
+            <img src="Assets/PDF DOC.png" alt="logo" class="img-fluid">
+            <h1 class="mt-4">Konversi PDF ke WORD</h1>
             <div class="d-flex justify-content-center">
               <label class="btn btn-primary" style="width: 200px;">
                 Pilih File <input type="file" class="form-control" style="display: none;">
